group problems by related packages